syntax = "proto3";

package api.v1.gw;

option go_package = "protos-repo/gw/api/v1/gw";

import "github.com/asjard/protobuf/http.proto";

// Gateway Example
service Gw {
    // Get all service instances
    // This is a example that how to get service instances from registry
    rpc GetServiceInstances(ServiceInstancesReq) returns (ServiceInstancesResp) {
        option (asjard.api.http) = {
            get : '/instances'
        };
    }
}

message ServiceInstancesReq {
    // service name
    string service_name = 1;
}

message ServiceInstancesResp {
    message Instance {
        string service_name = 1;
        string instance_id  = 2;
    }
    repeated Instance instances = 1;
}
